--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/ironicHackers-Ironhack-Sept-22/lab-express-basic-site#readme",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "devDependencies": {}
 }
